RESOLVED FIXED103784
Fix potential crash when canceling animations on renderers with no node
https://bugs.webkit.org/show_bug.cgi?id=103784
Summary Fix potential crash when canceling animations on renderers with no node
Simon Fraser (smfr)
Reported 2012-11-30 15:50:40 PST
Fix potential crash when canceling animations on renderers with no node
Attachments
Patch (1.84 KB, patch)
2012-11-30 15:53 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2012-11-30 15:53:07 PST
Simon Fraser (smfr)
Comment 2 2012-11-30 15:53:41 PST
Simon Fraser (smfr)
Comment 3 2012-11-30 15:57:15 PST
Note You need to log in before you can comment on or make changes to this bug.