Fix potential crash when canceling animations on renderers with no node https://bugs.webkit.org/show_bug.cgi?id=103784

Reviewed by Dan Bernstein.

We could crash when tearing down RenderScrollbars because we hit
AnimationController::cancelAnimations() for a renderer with no node.
The assertion already check for a null node, but the line after
does not, so fix that.

I tried to make a test with animations/transitions on a custom scrollbar, but was not able
to get it to crash.

* page/animation/AnimationController.cpp:
(WebCore::AnimationController::cancelAnimations):

Canonical link: https://commits.webkit.org/121888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136293 268f45cc-cd09-0410-ab3c-d52691b4dbfc